# Driftveil

./: .gitignore  Architecture.md  README.md  pyproject.toml
driftveil/: __init__.py  cli.py  exceptions.py
driftveil/core/: __init__.py  column_veil.py  dataset_veil.py  pact.py  pair_veil.py
driftveil/io/: __init__.py  adapters.py  serialise.py
driftveil/report/: __init__.py  html_report.py  mlflow.py  plots.py  report.py
driftveil/tests/: __init__.py  categorical.py  correlation.py  distribution.py  normality.py  stability.py
examples/: demo.ipynb
tests/: test_driftveil.py
